tests/NormalTests/paczka1/fuzzy1/15227562.err
Error in line 8: OTTnxhOLD2K S209 0,9
Error in line 9: YGcY S209 37,6
Error in line 5: 2GeRb2 S734 257,5
Error in line 20: 2GeRb2 S28 90,5
Error in line 37: 2GeRb2 S734 82,8
